--- a/DERYA/styles.css
+++ b/DERYA/styles.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background: url("/img/fondo.jpg") no-repeat center center fixed;
+  background: url('/img/fondo.jpg') no-repeat center center fixed;
   background-size: cover;
   color: #fff;
   min-height: 100%; /* Mantiene el cuerpo estirado */
@@ -50,9 +50,9 @@ nav {
 }
 
 .nav-list a {
-  color: #fff;
+  color: rgb(255, 217, 0);
   text-decoration: none;
-  font-size: 16px;
+  font-size: 20px;
   padding: 8px 10px;
   border-radius: 6px;
   transition: 0.18s;
@@ -91,7 +91,8 @@ nav {
   width: 220px;
   transition: 0.3s;
   backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.1);
+
+  border: 1.5px solid rgb(255, 217, 0); /* borde amarillo */
 }
 
 .leccion h2 {
@@ -160,14 +161,16 @@ nav {
 --------------------------- */
 
 footer {
-  margin-top: auto;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(6px);
   padding: 20px 0;
-  position: relative;
   text-align: center;
-  width: 100%;
   overflow: hidden;
+  z-index: 999; /* opcional si tienes elementos encima */
 }
 
 /* Enlaces en esquinas */
@@ -176,6 +179,7 @@ footer a:first-of-type {
   left: 20px;
   top: 50%;
   transform: translateY(-50%);
+  color: rgb(255, 217, 0);
 }
 
 footer a:last-of-type {
@@ -183,6 +187,7 @@ footer a:last-of-type {
   right: 20px;
   top: 50%;
   transform: translateY(-50%);
+  color: rgb(255, 217, 0);
 }
 
 /* Texto centrado */
@@ -255,7 +260,7 @@ footer p {
 
 .chapter code {
   color: #00ffea;
-  font-family: "Consolas", "Courier New", monospace;
+  font-family: 'Consolas', 'Courier New', monospace;
 }
 
 /* Citas del Markdown */
@@ -318,8 +323,11 @@ footer p {
   padding: 16px;
   border-radius: 10px;
   height: fit-content;
-  position: sticky;
+  position: fixed;
   top: 40px;
+  left: 40px;
+  max-height: 800px; /* <--- límite al alto de la pantalla */
+  overflow-y: auto; /* <--- scroll interno */
   font-size: 14px;
   line-height: 1.4;
   border: 1px solid rgba(255, 255, 255, 0.08);
